[package]
name = "cmb"
version = "0.1.0"
authors = ["jerry-yu <yubo@rivtower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cita-tool = { git = "https://github.com/citahub/cita-cli", branch = "master"}
log = "0.4.8"
env_logger = "0.7.1"
serde_json = "1.0.60"
serde = "^1.0.53"
serde_derive = "^1.0.53"
